front_end updated

--- a/views/signIn.html
+++ b/views/signIn.html
@@ -24,47 +24,50 @@
 
 <body>
 
-    <div style="background-color: rgb(14, 248, 190);">
-      <h3 class="text-center" style="color:black;opacity: 0.8;">Pleasure to have you here..</h3>
-      <div id="main">
-        <p id="option"><strong>Enter your Username or Email</strong> </p>
-        <div class="form-group">
-          
-          <div class="input-group">
-            <div class="input-group-prepend">
-
-              <div class="input-group-text">@</div>
-
-            </div>
-            <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username">
-          </div>
-        </div>
-        <div class="text-center" style="font-weight: bold;">OR</div>
-        <div class="form-group">
-          <label class="sr-only" for="inlineFormInputGroupUsername">Email</label>
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <div class="input-group-text"><i class="fa fa-envelope"></i></div>
-            </div>
-            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="inlineFormInputGroupUsername">Pass</label>
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <div class="input-group-text"><i class="fa fa-lock" style="font-size:1.2em;"></i></i></div>
-            </div>
-            <input type="text" class="form-control" id="inlineFormInputGrouppass" placeholder="Password">
-          </div>
-        </div>
-        <div class="text-center">
-          <button type="button" class="signin_button">Sign In</button>
-        </div>
-        <div style="font-weight: bold; margin:0rem 6rem; height: 2rem; text-align: right;"><a href="#" target="_blank">forgot Password??</a></div>
-      </div>
-
+  <div style="height: 40rem; background-color: rgb(14, 248, 190);">
+    <div class="signin_title">
+      <h3>Hey! Welcome</h3>
     </div>
+      <div id="main" class="signin_block">
+      <p id="option" style="margin:3rem;margin-top: 0rem; margin-bottom: 1rem;">Enter Email or Mobile Number </p>
+      <div class="form-group" style="margin: 3rem; margin-top: 1rem; margin-bottom: 1rem;">
+
+        <div class="input-group" style=>
+          <div class="input-group-prepend">
+
+            <div class="input-group-text"><i class="fa fa-envelope"></i></div>
+
+          </div>
+          <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Mobile Number">
+        </div>
+      </div>
+      <div class="text-center" style="font-weight: bold;">OR</div>
+      <div class="form-group" style="margin: 3rem; margin-top: 1rem;">
+        <label class="sr-only" for="inlineFormInputGroupUsername">Email</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text">@</div>
+          </div>
+          <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email">
+        </div>
+      </div>
+      <div class="form-group" style="margin: 3rem;">
+        <label class="sr-only" for="inlineFormInputGroupUsername">Pass</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><i class="fa fa-lock" style="font-size:1.2em;"></i></i></div>
+          </div>
+          <input type="text" class="form-control" id="inlineFormInputGrouppass" placeholder="Password">
+        </div>
+      </div>
+      <div class="text-center">
+        <button type="button" class="signin_button strong">Sign In</button>
+      </div>
+      <div style="font-weight: bold; margin:1rem 6rem; height: 2rem; text-align: right;"><a href="#"
+          target="_blank">forgot Password??</a></div>
+    </div>
+
+  </div>
 
 </body>
 
