--- a/views/login.html
+++ b/views/login.html
@@ -28,7 +28,7 @@
   <div class="row">
 
 
-    <div class="col-sm-0 col-md-4" id="hide"
+    <div class="col-sm-0 col-md-4" id="hide" 
       style=" color:white; margin-top: auto 0;opacity: 0.8;  background-color: black;height: 100vh; ">
 
       <div style="margin-top: 36%;">
@@ -36,59 +36,124 @@
         <a href="login.html" style="color: whitesmoke;"> <i class="fa fa-home fixed-top"
             style="font-size: 2em; margin:10px;"></i></a>
         <h3 class="text-center" style="color: aqua;">Welcome...</h3>
-        <p class="text-center" style="margin-top: 5%; margin-bottom: 7%;">Already have an account?<br></p>
+        <p class="text-center strong" style="margin-top: 5%; margin-bottom: 7%; color: rgb(245, 145, 13);">Already an User?</p>
         <div class="text-center">
-          <button type="button" class="login_button">Sign In</button>
+          <button type="button" class="login_button strong">Sign In</button>
         </div>
       </div>
     </div>
 
     <div class="col-sm-12  col-md-8" style="background-color: rgb(14, 248, 248);">
-      <h3 class="text-center" style="color:black;opacity: 0.8;">Registration for Customers</h3>
-      <div id="main">
+      <div id="title_block"><h3>Registration</h3></div>
+      <div class="reg_block" id="main">
 
-        <div class="icon text-center">
+        <!-- <div class="icon text-center">
           <i class="fa fa-facebook logo" style=" padding-top: 11px; color: orangered;"></i>
           <i class="fa fa-linkedin logo" style=" padding-top: 8px; color: white;"></i>
           <i class="fa fa-google-plus logo" style=" padding-top: 10px; color: green;"></i>
         </div>
-        <div class="text-center" style="font-weight: bold;">OR</div>
+        <div class="text-center" style="font-weight: bold;">OR</div> -->
 
-        <div class="form-group" style="margin-top: 4%;">
-          <label class="sr-only" for="inlineFormInputGroup">Full Name</label>
+        <div class="form-group " style="margin-top: 2rem;">
+          <label class="sr-only" for="inlineFormInputGroup">First Name</label>
+          <label class="sr-only" for="inlineFormInputGroup">Last Name</label>
           <div class="input-group">
-            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter Your Full Name">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup"  placeholder="First Name">
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Last Name">
           </div>
         </div>
-        <div class="form-group">
-          <label class="sr-only" for="inlineFormInputGroupUsername">Username</label>
-          <div class="input-group">
-            <input type="text" class="form-control" id="inlineFormInputGroupUsername"
-              placeholder="Enter/Select your Username">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="inlineFormInputGroup">Email</label>
-          <div class="input-group">
-            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="E-mail">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="inlineFormInputGrouppass">Password</label>
-          <div class="input-group">
-            <input type="text" class="form-control" id="inlineFormInputGrouppass" placeholder="Enter a Password">
-          </div>
-        </div>
+
         <div class="form-group">
           <label class="sr-only" for="inlineFormInputGroup">Mobile Number</label>
           <div class="input-group">
-            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Your Mobile Number">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Mobile Number">
+          </div>
+        </div>
+        
+        <div class="form-group">
+          <label class="sr-only" for="inlineFormInputGroup">Email</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="E-mail">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="sr-only" for="inlineFormInputGroup">House No.</label>
+          <label class="sr-only" for="inlineFormInputGroup">Street/Locality</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="House No." required="required">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Street/Locality">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="sr-only" for="inlineFormInputGroup">Landmark</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter a Landmark">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="sr-only" for="inlineFormInputGroup">City/Town</label>
+          <label class="sr-only" for="inlineFormInputGroup">State</label>
+          <label class="sr-only" for="inlineFormInputGroup">PIN</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="City/Town">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="State">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="PIN">
+          </div>
+        </div>
+        
+        <div class="form-group" style="margin-top:4%">
+          <label class="sr-only" for="inlineFormInputGrouppass">Password</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGrouppass" placeholder="Set a Password">
+          </div>
+        </div>
+        
+        <div class="form-group">
+          <label class="sr-only" for="inlineFormInputGrouppass">Confirm Password</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text required">*</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGrouppass" placeholder="Confirm Your Password">
           </div>
         </div>
 
         <div class="text-center">
-          <button type="button" class="signup_button">Sign Up</button>
+          <button type="button" class="signup_button strong">Sign Up</button>
         </div>
+
+        <p style="margin-top: 1rem; text-align: right;"><span class="required">*</span><strong>  are mandatory required fields..</strong></p>
+
       </div>
     </div>
 
