--- a/views/style.css
+++ b/views/style.css
@@ -21,7 +21,19 @@
                  box-shadow: 0 0 8px rgba(0,0,0,0.4);
 
       }
-     
+
+      .signin_block:hover{
+        padding: 1rem;
+        background-color: black;
+        color:whitesmoke;
+      }
+
+      .reg_block:hover{
+        padding: 3px;
+        background-color: black;
+        color: rgb(241, 241, 243);
+      }
+
 
       h1{
           font-family: 'Ubuntu', sans-serif;
@@ -33,7 +45,7 @@
         margin-top: 4%;
         margin-bottom:2%;
         text-align: center;
-        opacity: 0.8;
+        opacity: 0.6;
       }
     .login
     {
@@ -57,7 +69,7 @@
     padding: .4rem 3rem;
     font-size: 1.25rem;
     line-height: 1.5;
-    background-color: white;
+    background-color: rgb(201, 91, 91);
     border: none;
     color: black;
     border-radius: .5rem;
@@ -101,6 +113,44 @@
     button.signup_button:hover {
         background-color:black;
       }
+    button.signin_button:hover {
+        background-color:black;
+        color: aqua;
+      }
+
+
     #main{
-      width:55%; margin: 0 auto;margin-top: 10%;
+      width:35rem; height: 35rem;
+       margin: auto auto;margin-top: 35px;
+    }
+
+    #title_block{
+      width:12rem; margin: 0 auto;margin-top: 25px;
+      background-color: rgb(17, 20, 187);
+      color:white;
+      text-align: center;
+    }
+
+    #title_block:hover{
+      background-color:rgb(21, 162, 228);
+    }
+
+    .signin_title{
+      width:15rem; margin-left: 35rem;
+      background-color: cyan;
+      color:black;
+      text-align: center;
+    }
+    .signin_title:hover{
+      background-color:black;
+      color: cyan;
+    }
+
+    .required{
+      color: red;
+      font-weight: bolder;
+    }
+   
+    .strong{
+      font-weight: bold;
     }
