--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="description" content="Best Doracakes">
   <meta name="keywords" content="HTML, CSS, JavaScript">
-  <meta name="author" content="Abhishek Rahul">
+  <meta name="author" content="Ayyan Sikandar">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <link rel="icon" href="img/favicon.jpeg">
 
